style.css
:root {
	/* Dark Mode */
	--primary: hsl(220, 41%, 10%);
	--secondary: hsl(220, 41%, 10%);
	--navigation: hsl(0, 0%, 81%);
	--header: hsl(0, 0%, 98%);
	--paragraph: hsl(0, 0%, 81%);
	--accent: hsl(220, 100%, 70%);
	--mobile-nav: hsl(219, 56%, 12%);

	/*Light Mode */
	--lm-primary: hsl(0, 0%, 96%);
	--lm-header: hsl(0, 0%, 83%);
	--lm-list: hsl(0, 0%, 66%);

	/* Animation */
}

/* GENERAL */

.animate__animated.animate__fadeInUp {
	--animate-delay: 0.2s;
}

.animate__animated.animate__fadeInRight {
	--animate-delay: 0.5s;
}

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

html {
	scroll-behavior: smooth;
}

body {
	color: white;
	background-color: var(--primary);
	font-family: "Montserrat", sans-serif;
	transition: background-color 0.3s ease-in;
}

main {
	display: flex;
	flex-direction: column;
	overflow: hidden;
}

h2 {
	font-size: clamp(2rem, 7vw, 3.5rem);
	margin-bottom: 4rem;
}

a {
	text-decoration: none;
	color: white;
}

img {
	vertical-align: top;
}

/* REVERSE CLASS FOR EMAIL OBFUSCATION */

span.reverse {
	unicode-bidi: bidi-override;
	direction: rtl;
}

/* UTILITY CLASSES*/

.wrapper {
	position: relative;
	padding: 4rem;
	max-width: 1440px;
	margin: 0 auto;
}

.section-line-container {
	max-width: 1440px;
	align-self: center;
	width: 100%;
	padding: 0 4rem;
}

.section-line-primary {
	width: 4.5rem;
	height: clamp(0.3rem, 1vw, 0.5rem);
	background: linear-gradient(90deg, #ae36fe -50%, #04d7d9 150%);
	border-radius: 25px;
	margin: 2rem 0;
}

.section-line-secondary {
	width: 4.5rem;
	height: clamp(0.3rem, 1vw, 0.5rem);
	background: linear-gradient(90deg, #985dd0 0%, #e5633c 100%);
	border-radius: 25px;
	margin: 2rem 0;
}

/* WEGLOT STYLE */

.container .weglot.invert * {
	color: black;
}

.container .weglot-container {
	margin-right: auto;
	border: none;
	background-color: transparent;
}

.container .weglot-container * {
	border: none;
	background-color: transparent;
}

.container .wg-drop.country-selector .wgcurrent {
	border: none;
	background-color: transparent;
}

.container .wg-drop.country-selector {
	background-color: transparent;
}

.container .wg-drop.country-selector * {
	border: none;
	background-color: transparent;
}

.container .country-selector a {
	color: white;
	background-color: transparent;
}

.container .wg-drop.country-selector .wgcurrent:after {
	filter: invert();
	background-color: transparent;
}

.container .weglot-container li {
	transition: 0.3s ease;
	background-color: transparent;
}

/* HEADER */

.nav-mobile {
	display: none;
}

header .container {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 2rem 4rem;
	max-width: 1504px;
	margin: 0 auto;
	position: relative;
}

.logo-container {
	background-color: white;
	display: flex;
	align-items: center;
	overflow: hidden;
	border-radius: 5px;
}

.logo {
	width: 2.5rem;
	height: 2.5rem;
	/* background-image: url(images/pb-logo.svg); */
	background-repeat: no-repeat;
	background-size: contain;
	cursor: pointer;
}

header .container img {
	max-width: 100%;
	margin-right: 0.5rem;
}

header nav {
	position: absolute;
	left: 25vw;
}

.nav-list {
	list-style: none;
	display: flex;
	gap: 3vw;
}

.nav-list li {
	display: inline-block;
	font-size: 1rem;
	font-weight: 700;
	margin-top: 0.5rem;
}

.nav-list a {
	font-family: inherit;
	color: var(--navigation);
	transition: 0.3s ease;
}

.nav-list a:hover {
	color: white;
	transition: 0.3s ease;
}

header .media-links {
	display: flex;
	gap: clamp(1rem, 2vw, 3rem);
}

header i {
	color: white;
	font-size: 2rem;
	transition: 0.3s ease;
}

header a i:hover {
	transform: scale(1.1);
	transition: 0.3s ease;
}

/* DARK MODE SWITCH */

.dark-toggle {
	display: flex;
	align-items: center;
}

.checkbox {
	opacity: 0;
	position: absolute;
}

.label {
	background-color: #1e3764;
	border-radius: 50px;
	cursor: pointer;
	display: flex;
	align-items: center;
	justify-content: space-between;
	padding: 5px;
	position: relative;
	height: 26px;
	width: 50px;
	transform: scale(1.2);
}

.label .ball {
	background-color: #fff;
	border-radius: 50%;
	position: absolute;
	top: 2px;
	left: 2px;
	height: 22px;
	width: 22px;
	transform: translateX(0px);
	transition: transform 0.2s linear;
}

.checkbox:checked + .label .ball {
	transform: translateX(24px);
}

.fa-moon {
	font-size: 1rem;
	color: #f1c40f;
}

.fa-sun {
	font-size: 1rem;
	color: #f39c12;
}

/* HERO SECTION*/

.hero-wrapper {
	position: relative;
	padding: 4rem;
	max-width: 1440px;
	margin: 0 auto;
	display: flex;
	margin-bottom: 0rem;
}

.hero-text-container {
	color: var(--header);
	margin-top: 4rem;
}

.hero-text-container h1 {
	color: var(--header);
	font-size: clamp(2rem, 7vw, 4rem);
	font-weight: 600;
	position: relative;
	z-index: 2;
}

.hero-text-container p {
	position: relative;
	max-width: 58%;
	margin-top: 2rem;
	line-height: clamp(1.5rem, 4vw, 3rem);
	font-size: clamp(1rem, 3vw, 1.8rem);
	z-index: 12;
	color: var(--paragraph);
	margin-bottom: 1rem;
}

.hero-text-container .cta {
	display: inline-block;
	color: white;
	font-size: clamp(1rem, 4vw, 1.5rem);
	font-weight: 400;
	margin-right: 1.5rem;
	padding: 1rem 2rem;
	border-radius: 50px;
	background-color: var(--primary);
	background: linear-gradient(90deg, #ae36fe -50%, #04d7d9 150%);
	border: none;
	cursor: pointer;
	transition: 0.3s ease;
	margin-top: 2rem;
	z-index: 90;
}

.hero-text-container .cta i {
	margin-left: 0.5rem;
}

.hero-text-container .cta:hover {
	filter: saturate(1.7) brightness(1.2);
	transition: 0.3s ease;
}

.hero-text-container button:active {
	outline: none;
}

.hero-animation {
	position: absolute;
	top: -1rem;
	right: 0;
	width: 40rem;
	z-index: -1;
}

/* PROJECTS SECTION*/

.projects-wrapper {
	overflow: hidden;
	padding: 4rem;
	max-width: 1440px;
	margin: 0 auto;
}

.project-cards-wrapper {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
	grid-auto-rows: 1fr;
	gap: 5rem;
}

.project-card {
	border-radius: 5px;
	max-width: 616px;
	justify-self: center;
}
/* ... */

